--- a/6、母亲节快乐.html
+++ b/6、母亲节快乐.html
@@ -127,7 +127,7 @@
 <body class="antialiased">
 
     <audio id="backgroundMusic" loop autoplay>
-      <source src="6、母亲节快乐 Tales From the Snow Mountain.mp3" type="audio/mpeg">
+      <source src="https://feibo123132.github.io/mothers-day-card/6、母亲节快乐 Tales From the Snow Mountain.mp3" type="audio/mpeg">
     </audio>
 
     <button onclick="document.getElementById('backgroundMusic').play()" class="fixed bottom-4 right-4 bg-sky-500 text-white p-3 rounded-full shadow-lg hover:bg-sky-600 transition-colors z-50">
